# matching-engine

./: Cargo.toml  README.md
benches/: matching_engine.rs
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  order.rs  order_book.rs  order_book_level.rs  order_entry.rs  side.rs  trade.rs
src/matching/: command.rs  engine.rs  mod.rs  state.rs
src/routes/: mod.rs  orders.rs  ws.rs
src/routes/models/: mod.rs  order_modification.rs
tests/: health_check.rs  matching_broadcast.rs
tests/utils/: test_app.rs
